--- a/src/app/cafe/cafe.css
+++ b/src/app/cafe/cafe.css
@@ -2,9 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
-  margin: 0;
   font-family: "Noto Sans KR", sans-serif;
   text-decoration: none;
+}
+body p {
+  margin: 0;
 }
 .cafe-scroll-box {
   background-color: rgb(238, 238, 238);
@@ -29,7 +31,8 @@
   width: 100%;
   object-fit: cover;
   border-radius: 0.1rem;
-  border: 0.5px solid rgb(154, 154, 154);
+  border: 1px solid rgba(195, 195, 195, 0.5);
+  border-radius: 10px;
 }
 .cafe-post-title {
   color: black;
