--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,11 +109,6 @@ html {
   .sidenav {
     display: none;
   }
-
-  .main-content {
-    transition: all 3.5s;
-    margin-bottom: 7vh;
-  }
 }
 .sidenavout {
   background-color: white;
@@ -609,7 +604,7 @@ html {
   font-weight: 600;
 }
 .line {
-  border: 0.05px solid rgba(195, 195, 195, 0.5);
+  border-bottom: 1px solid rgb(195, 195, 195, 0.5);
   margin-bottom: 0.1rem;
   margin-top: 0.1rem;
 }
@@ -649,7 +644,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1); /* 반투명 배경 */
+  background-color: rgba(0, 0, 0, 0.3); /* 반투명 배경 */
   justify-content: center;
   align-items: center;
 }
