--- a/src/app/cafe/cafe.css
+++ b/src/app/cafe/cafe.css
@@ -114,3 +114,50 @@ body p {
 .width50 {
   width: 49%;
 }
+.cafe-profileimg {
+  border-radius: 100px;
+  border: 1px solid black;
+  min-width: 30px;
+  max-width: 5vmin;
+  margin-right: 10px;
+}
+.cafe-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
+.cafe-top a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cafe-top-title {
+  color: rgb(114, 114, 221);
+  font-size: 10px;
+  font-weight: 1000;
+  margin: 0;
+  line-height: 1;
+}
+.cafe-middle-container {
+  margin-top: 10px;
+}
+.cafe-top-search {
+  background-color: #eaeaea;
+  width: 50%;
+  height: 10px;
+  border-radius: 100px;
+  padding: 10px;
+  border: none;
+}
+
+.cafe-top-search:focus {
+  outline: none;
+  border: 1px solid rgb(113, 113, 187);
+}
+
+.cafe-top-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
