--- a/src/app/cafe/cafe.css
+++ b/src/app/cafe/cafe.css
@@ -145,9 +145,11 @@ body p {
 .cafe-top-search {
   background-color: #eaeaea;
   width: 50%;
-  height: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
   border-radius: 100px;
   padding: 10px;
+  font-size: 12px;
   border: none;
 }
 
