--- a/src/app/attendance/style.css
+++ b/src/app/attendance/style.css
@@ -119,13 +119,15 @@
   margin-right: 0.5rem;
 }
 .plus-student-input {
-  width: 48%;
+  width: 50%;
   background-color: #e5e5e5;
   border-radius: 0.5rem;
   padding-right: 10px;
   padding-left: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
   font-size: 12px;
   color: #000000;
   border: none;
