--- a/src/app/style.css
+++ b/src/app/style.css
@@ -55,7 +55,7 @@ body {
 .graph-day {
   margin: 0;
   font-family: "Noto Sans KR", sans-serif;
-  font-size: 30px;
+  font-size: 5vw;
   font-weight: 500;
   color: white;
   line-height: 1;
@@ -66,10 +66,10 @@ body {
   align-content: space-between;
   flex-direction: column;
 }
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 800px) {
   .graph-title-blue {
     background-color: rgb(138, 156, 255);
-    width: 30%;
+    width: 30vw;
     border-radius: 1rem;
     margin-bottom: 20px;
     padding: 0.8rem;
@@ -77,7 +77,7 @@ body {
     box-sizing: border-box;
   }
 }
-@media screen and (min-width: 1180px) {
+@media screen and (min-width: 800px) {
   .graph-display {
     flex-direction: row;
     justify-content: space-between;
@@ -104,7 +104,7 @@ body {
     box-sizing: border-box;
   }
   .graph-day {
-    font-size: 90px;
+    font-size: 7vw;
     font-family: "Roboto", sans-serif;
     font-weight: 600;
     line-height: 1;
