--- a/src/app/study/style.css
+++ b/src/app/study/style.css
@@ -1,3 +1,16 @@
+@media screen and (min-width: 750px) {
+  .phone-display-none {
+    display: none;
+  }
+  .day-box {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 750px) {
+  .pad-display-none {
+    display: none;
+  }
+}
 .day-box {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -13,6 +26,7 @@
   color: white;
   font-weight: 500;
   font-size: 16px;
+  width: 33%;
 }
 .day-box p {
   margin: 0;
@@ -47,13 +61,29 @@
 .buttons {
   display: flex;
   margin-top: 8vh;
-  margin-bottom: 8vh;
+  margin-bottom: 20px;
   justify-content: center;
+}
+.buttons-top {
+  display: flex;
+  justify-content: right;
 }
 .studybar-subtitle {
   text-align: center;
   font-size: 3vw;
   font-weight: 600;
+  margin: 0;
+}
+.studybar-top-subtitle {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 5vh;
+}
+.studybar-top-title {
+  text-align: center;
+  padding-top: 5vh;
+  font-size: 6vw;
+  font-weight: 800;
   margin: 0;
 }
 .start-button {
@@ -97,4 +127,42 @@
   font-weight: 600;
   margin-right: 3px;
   margin-left: 3px;
+}
+.time-box {
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  padding: 10px;
+
+  width: 60%;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(139, 139, 139);
+  border-radius: 1rem;
+  color: black;
+  font-weight: 500;
+  font-size: 16px;
+}
+.study-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+.study-buttons button {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  border: 1px solid rgb(139, 139, 139);
+  border-radius: 1rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 12px;
+  font-weight: 600;
+  margin-right: 3px;
+  margin-left: 3px;
+}
+.study-top-display {
+  display: flex;
+  justify-content: space-between;
 }
