--- a/src/app/cafe/cafe.css
+++ b/src/app/cafe/cafe.css
@@ -38,13 +38,18 @@
 .cafe-post-title {
   color: black;
   margin-top: 1px;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 15px;
 }
 .display-flex {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.display-center {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
 }
 
 .margin-topbottom10px {
@@ -71,7 +76,18 @@
   -webkit-box-orient: vertical;
 }
 .cafe-nickname {
-  margin-bottom: 10px;
+  line-height: 1;
+  margin-left: 8px;
+  font-size: 13px;
+  font-weight: 700;
+}
+.cafe-nickname-sub {
+  line-height: 1;
+  margin-left: 8px;
+  padding-top: 3px;
+  font-size: 10px;
+  font-weight: 500;
+  color: gray;
 }
 
 .cafe-post {
@@ -208,4 +224,135 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
+}
+.cafe-postinfo-nickname {
+  line-height: 1;
+  margin: 0;
+  margin-left: 8px;
+  font-size: 16px;
+  font-weight: 700;
+}
+.cafe-postinfo-nickname-sub {
+  line-height: 1;
+  margin: 0;
+  padding-top: 3px;
+  margin-left: 8px;
+  font-size: 11px;
+  font-weight: 500;
+  color: gray;
+}
+.cafe-postinfo-top {
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+.cafe-postinfo-img {
+  height: 100%;
+  border-radius: 0.5rem;
+  width: auto;
+  box-sizing: border-box;
+  object-fit: cover;
+}
+.display-postinfo-center {
+  margin-top: 20px;
+  height: 10vw;
+  max-height: 80px;
+  margin-bottom: 13px;
+  min-height: 30px;
+  box-sizing: border-box;
+}
+.postinfo-title {
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 1;
+}
+.postinfo-content {
+  margin-top: 10px;
+  font-size: 13px;
+  text-overflow: ellipsis;
+  white-space: pre-line;
+}
+
+.comment {
+  overflow-y: auto;
+  box-sizing: border-box;
+  margin-bottom: 60px;
+}
+
+.commentbar {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  box-sizing: border-box;
+  height: 60px;
+}
+
+.inputcomment {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  padding: 10px;
+  border: none;
+  border-left: 1px solid rgb(113, 113, 187);
+  border-top: 1px solid rgb(113, 113, 187);
+  border-bottom: 1px solid rgb(113, 113, 187);
+}
+.inputcomment:focus {
+  outline: none;
+}
+@media screen and (min-width: 768px) {
+  .commentbar {
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    width: calc(100% - 85px);
+    box-sizing: border-box;
+    height: 60px;
+  }
+}
+.commentbtn {
+  white-space: nowrap;
+  padding-right: 8px;
+  border: none;
+  height: 100%;
+  background: rgb(255, 255, 255);
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border-right: 1px solid rgb(113, 113, 187);
+  border-top: 1px solid rgb(113, 113, 187);
+  border-bottom: 1px solid rgb(113, 113, 187);
+}
+.bordercomment {
+  border-radius: 0.5rem;
+  border: 1px solid rgb(213, 213, 213);
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.postinfo-content {
+  margin: 0;
+}
+.cafe-postinfo-content-img {
+  width: 3vw;
+  min-width: 30px;
+  max-width: 60px;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+.display-postinfo-content {
+  display: flex;
+  align-items: center;
+
+  margin-bottom: 3px;
 }
