--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -719,3 +719,51 @@ html {
   outline: none;
   background-color: rgb(237, 239, 250);
 }
+
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.loader .dots {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+  background: #ffffff;
+  animation: myani 1s ease-in-out 0s infinite;
+}
+.loader .dots:nth-child(1) {
+  animation-delay: 0s;
+}
+.loader .dots:nth-child(2) {
+  animation-delay: 0.15s;
+}
+.loader .dots:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.loader .dots:nth-child(4) {
+  animation-delay: 0.45s;
+}
+
+@keyframes myani {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+}
