--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -801,3 +801,38 @@ html {
 
   white-space: nowrap;
 }
+.meal-container {
+  perspective: 500px;
+  cursor: pointer;
+}
+
+.meal-card {
+  position: relative;
+  width: 100%;
+  height: auto; /* Set a fixed height */
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flipped {
+  transform: rotateX(180deg);
+}
+
+.meal-content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.front {
+  background: #fff; /* Front card background */
+  border-radius: 8px;
+}
+
+.back {
+  color: rgb(0, 0, 0);
+  height: 100%;
+  border-radius: 8px;
+  transform: rotateX(180deg);
+}
