--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -785,6 +785,16 @@ html {
   font-size: 13px;
   font-weight: 500;
 }
+.loading {
+  font-size: 1.5em;
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  color: #8a8a8a;
+}
 .display-flex-school p {
   margin: 0;
 }
