--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -397,20 +397,12 @@ html {
 }
 
 @media screen and (min-width: 600px) {
-  .home-layout {
-    padding-top: 15px;
-    transition: all 1s;
-  }
   .home-dish-list p {
     font-size: 13.5px;
     transition: all 1s;
   }
 }
 @media screen and (max-width: 599px) {
-  .home-layout {
-    padding-top: 15px;
-    transition: all 1s;
-  }
   .home-dish-list p {
     font-size: 12px;
     transition: all 1s;
@@ -771,6 +763,10 @@ html {
   .margin {
     height: 80px;
   }
+  .main-container {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
 }
 @media screen and (min-width: 800px) {
   .margin {
@@ -847,13 +843,10 @@ html {
   transform: rotateX(180deg);
 }
 /* Events.css */
-.event-slide {
-  position: relative;
-}
 
-.event-slide img {
+.home-event-img {
   width: 100%;
-  height: 50vw;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -870,7 +863,6 @@ html {
   ); /* Darker gradient */
   display: flex;
   flex-direction: column;
-
   justify-content: flex-end;
   align-items: flex-start;
   padding: 20px;
@@ -887,4 +879,20 @@ html {
 .event-overlay p {
   margin: 0;
   font-size: 16px;
+}
+.school-etc {
+  border: 1px solid rgb(195, 195, 195, 0.5);
+  border-radius: 0.8rem;
+  padding: 12px;
+  text-decoration: black;
+}
+
+.school-etc div,
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.school-etc:hover {
+  box-shadow: rgb(123, 123, 123, 0.2) 0px 1px 3px;
 }
